Added project arquitecture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,23 @@ project(ReplicacioEpidemica VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(ReplicacioEpidemica main.cpp Server.cpp Client.cpp Socket.cpp Node.cpp Application.cpp)
+add_subdirectory(dependencies/spdlog)
 
+if(NOT TARGET spdlog)
+    # Stand-alone build
+    find_package(spdlog REQUIRED)
+endif()
+
+add_executable(ReplicacioEpidemica main.cpp Server.cpp Client.cpp Socket.cpp Node.cpp CoreNode.cpp LayerOneNode.cpp LayerTwoNode.cpp)
+
+set(LIBS Ws2_32.lib spdlog::spdlog)
+
+target_include_directories(ReplicacioEpidemica PRIVATE dependencies/spdlog/include)
+target_include_directories(ReplicacioEpidemica PRIVATE dependencies/spdlog/include/spdlog)
 target_compile_features(ReplicacioEpidemica PRIVATE cxx_std_17)
+target_precompile_headers(ReplicacioEpidemica PRIVATE Commons.h)
+target_link_libraries(ReplicacioEpidemica PRIVATE ${LIBS})
+
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
