Added initial implementation of transactions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ if(NOT TARGET spdlog)
     find_package(spdlog REQUIRED)
 endif()
 
-add_executable(ReplicacioEpidemica main.cpp Server.cpp Client.cpp Socket.cpp Node.cpp CoreNode.cpp LayerOneNode.cpp LayerTwoNode.cpp Log.cpp FileWatcher.cpp LamportMutex.cpp MsgHandler.cpp)
+add_executable(ReplicacioEpidemica main.cpp Server.cpp Client.cpp Socket.cpp Node.cpp CoreNode.cpp LayerOneNode.cpp LayerTwoNode.cpp Log.cpp FileWatcher.cpp LamportMutex.cpp MsgHandler.cpp Transaction.cpp TransactionReader.cpp)
 
 set(LIBS Ws2_32.lib spdlog::spdlog efsw)
 
